--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,18 @@ header {
 svg {
   user-select: none;
 }
+
+#attribution {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #fff;
+  text-align: center;
+  background: #000;
+  padding: 5px;
+}
+
+#attribution a {
+  color: inherit;
+}
