--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,9 @@ svg {
   bottom: 0;
   left: 0;
   right: 0;
-  color: #fff;
-  text-align: center;
-  background: #000;
   padding: 5px;
+  font-size: 0.9em;
+  text-align: right;
 }
 
 #attribution a {
